--- a/index.html
+++ b/index.html
@@ -3,12 +3,32 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
-  <title>Hello World</title>
+  <link rel="stylesheet" href="index.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+  <title>Stephen Dunne</title>
   <meta name="description" content="Index page for personal website">
 </head>
 
 <body>
+  <nav class="navbar">
+    <a class="navbar-brand">
+      <img src="img/logo.jpg" width="30" height="30" class="d-inline-block align-top">
+      Stephen Dunne
+    </a>
+  </nav>
+
+  <div class="px-4 py-5 my-5 text-center">
+    <img id="profilepic" class=" d-block mx-auto mb-4" src="img/profilepic.jpg" width="188" height="188">
+    <h1 class="display-5 fw-bold">Stephen Dunne</h1>
+    <div class="col-lg-6 mx-auto">
+      <p class="lead mb-4">Computer Science Grad. Software/Web Developer </p>
+      <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+        <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Button 1 </button>
+        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Button 2</button>
+      </div>
+    </div>
+  </div>
   Hello World.
 </body>
 </html>
