--- a/about.html
+++ b/about.html
@@ -1,13 +1,12 @@
 <!doctype html>
 
 <html lang="en">
-
 <head>
-  <title>Stephen Dunne</title>
+  <title>About Me</title>
   <meta charset="utf-8">
-  <meta name="description" content="Index page for personal website">
-
-  <!-- Nav Bar -->
+  <meta name="description" content="About me page for personal website">
+  
+    <!-- Nav Bar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand"> <img src="img/logo.jpg" width="30" height="30" class="d-inline-block align-top">
       Stephen Dunne
@@ -18,10 +17,10 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href='index.html'>Home<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href='index.html'>Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href='about.html'>About Me</a>
+          <a class="nav-link" href='about.html'>About Me<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href='projects.html'>Projects</a>
@@ -42,18 +41,7 @@
 </head>
 
 <body>
- 
-
-
-  <div class="px-4 py-5 my-5 text-center">
-    <img id="profilepic" class=" d-block mx-auto mb-4" src="img/profilepic2.jpg" width="200" height="200">
-    <h1 class="display-5 fw-bold">Stephen Dunne</h1>
-    <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4">Computer Science Graduate and Aspiring Software Developer </p>
-    </div>
-  </div>
-
-  
+  Hello About Me 
+  <script src="js/scripts.js"></script>
 </body>
-
 </html>
