--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <title>About Me</title>
   <meta charset="utf-8">
   <meta name="description" content="About me page for personal website">
-  
+
     <!-- Nav Bar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand"> <img src="img/logo.jpg" width="30" height="30" class="d-inline-block align-top">
@@ -16,11 +16,11 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href='index.html'>Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href='about.html'>About Me<span class="sr-only">(current)</span></a>
+          <a class="nav-link active" href='about.html'>About Me</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href='projects.html'>Projects</a>
