--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
           <a class="nav-link" href='projects.html'>Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href='contact.html'>Contact <span class="sr-only">(current)</span></a>
+          <a class="nav-link active" href='contact.html'>Contact</a>
         </li>
       </ul>
     </div>
