--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href='index.html'>Home<span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+          <a class="nav-link active" href='index.html'>Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href='about.html'>About Me</a>
@@ -42,8 +42,6 @@
 </head>
 
 <body>
- 
-
 
   <div class="px-4 py-5 my-5 text-center">
     <img id="profilepic" class=" d-block mx-auto mb-4" src="img/profilepic2.jpg" width="200" height="200">
@@ -53,7 +51,7 @@
     </div>
   </div>
 
-  
+
 </body>
 
 </html>
