--- a/projects.html
+++ b/projects.html
@@ -15,14 +15,14 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href='index.html'>Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href='about.html'>About Me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href='projects.html'>Projects<span class="sr-only">(current)</span></a>
+          <a class="nav-link active" href='projects.html'>Projects</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href='contact.html'>Contact</a>
