--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
   <meta name="description" content="Index page for personal website">
 
   <!-- Nav Bar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand"> <img src="img/logo.jpg" width="30" height="30" class="d-inline-block align-top">
+  <nav class="navbar sticky-top navbar-expand-md navbar-light bg-light">
+    <a class="navbar-brand"> 
+      <img src="img/logo.jpg" width="30" height="30" class="d-inline-block align-top">
       Stephen Dunne
     </a>  
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
