--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
     </div>
   </div>
 
+  <hr style="height:30px">
+
+
 <!-- Footer -->
   <div class="container">
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
