--- a/index.html
+++ b/index.html
@@ -54,6 +54,26 @@
 
   <hr style="height:30px">
 
+  <div id="skillset" class="container">
+    <h2>My Skillset</h2>
+    <div class="row row-cols-2">
+      <div class="col">Python</div>
+      <div class="col">MySQL</div>
+      <div class="col">C</div>
+      <div class="col">PostgreSQL</div>
+      <div class="col">Java</div>
+      <div class="col">MongoDB</div>
+      <div class="col">GO</div>
+      <div class="col">HTML</div>
+      <div class="col">JavaScript</div>
+      <div class="col">VueJS</div>
+      <div class="col">NodeJS</div>
+    </div>
+
+
+  </div>
+
+  <hr style="height:30px">
 
 <!-- Footer -->
   <div class="container">
