--- a/index.html
+++ b/index.html
@@ -68,9 +68,8 @@
       <div class="col">JavaScript</div>
       <div class="col">VueJS</div>
       <div class="col">NodeJS</div>
+      <div class="col">MS Azure</div>
     </div>
-
-
   </div>
 
   <hr style="height:30px">
