--- a/index.html
+++ b/index.html
@@ -51,7 +51,18 @@
       <p class="lead mb-4">Computer Science Graduate and Aspiring Software Developer </p>
     </div>
   </div>
+  <hr style="height:30px">
 
+  <div id="overview" class="container">
+    <h2 id="overview-heading">Professional Overview</h2>
+    <ul>
+      <li> 2:1 (Upper) BSc. Computer Science (Infrastrucure).</li>
+      <li> 3 years professional experience in the IT industry.</li>
+      <li> Demonstrated ability in managing critical, business-down situations for fortune 100 companies.</li>
+      <li> Experienced in providing code review and code optimization. </li>
+      <li> Experienced in creating and executing testing plans for new software.</li>
+    </ul>
+  </div>
   <hr style="height:30px">
 
   <div id="skillset" class="container">
@@ -72,6 +83,12 @@
     </div>
   </div>
 
+  <hr style="height:30px">
+
+  <div id="description" class="container">
+    <h2 id="description-heading">About Me</h2>
+    Ever since I was young, I was interested in working with computers. Learning how new technology worked was something that came naturally to me as a child. Throughout secondary school I found that my interests lay in technical fields such as engineering and IT, when it came time to pick my courses for third-level, it was clear to me that I wanted to study computer science. I had always loved using software and technology, now it was time to learn how it worked, how it was built, and find out what lay underneath the surface. 
+  </div>
   <hr style="height:30px">
 
 <!-- Footer -->
