--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
   <div id="description" class="container">
     <h2 id="description-heading">About Me</h2>
-    Ever since I was young, I was interested in working with computers. Learning how new technology worked was something that came naturally to me as a child. Throughout secondary school I found that my interests lay in technical fields such as engineering and IT, when it came time to pick my courses for third-level, it was clear to me that I wanted to study computer science. I had always loved using software and technology, now it was time to learn how it worked, how it was built, and find out what lay underneath the surface. 
+    Ever since I was young, I was interested in working with computers. Learning how new technology worked was something that came naturally to me as a child. Throughout secondary school I found that my interests lay in technical fields such as engineering and IT, when it came time to pick my courses for third-level, it was clear to my that I wanted to study computer science. I had always loved using software and technology, now it was time to learn how it worked, how it was built, and find out what lay underneath the surface. This theme carried on to my professional career. Having worked as a software support engineer and a software consultant for one of the leading global IT companies, I have made the decision that I would like to go deeper into the world of IT, from the layer of support and consultancy, to software development.
   </div>
   <hr style="height:30px">
 
