Start on Projects

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <img id="profilepic" class=" d-block mx-auto mb-4" src="img/profilepic2.jpg" width="200" height="200">
     <h1 class="display-5 fw-bold">Stephen Dunne</h1>
     <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4">Computer Science Graduate and Aspiring Software Developer </p>
+      <p class="lead mb-4">Computer Science Graduate and Aspiring Software Engineer </p>
     </div>
   </div>
   <hr style="height:30px">
