--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,18 @@
 </head>
 
 <body>
-  Hello Projects 
+  Hello Projects
+  
+  <div id="project-list" class="container">
+    <ul>
+      <li>Twitter Recommedations</li>
+      <li>Robot Builder</li>
+      <li>Covid Tracker</li>
+      <li>Gym Recorder</li>
+      <li>Language Analyzer</li>
+    </ul>
+  </div>
+
   <!-- Footer -->
   <div class="container">
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
