--- a/projects.html
+++ b/projects.html
@@ -49,6 +49,7 @@
       <li>Covid Tracker</li>
       <li>Gym Recorder</li>
       <li>Language Analyzer</li>
+      <li>Country Guesser Quiz</li>
     </ul>
   </div>
 
