--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <div class="col">Java</div>
       <div class="col">MongoDB</div>
       <div class="col">GO</div>
-      <div class="col">HTML</div>
+      <div class="col">HTML/CSS</div>
       <div class="col">JavaScript</div>
       <div class="col">VueJS</div>
       <div class="col">NodeJS</div>
