--- a/projects.html
+++ b/projects.html
@@ -83,9 +83,53 @@
   </div>
 
   <hr style="height:25px">
-  
+  <!-- Projects Overview Cards -->
   <div id="projects-overview" class="container">
     <h2 id="section-heading">Projects Overview Cards</h2>
+    <div class="row row-cols-1 row-cols-md-2 g-4">
+      <div class="col">
+        <div class="card">
+          <img src="img/twitter.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img src="img/robot.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img src="img/virus.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img src="img/dumbbell.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
+
+
     <ul>
       <li>Twitter Recommedations</li>
       <li>Robot Builder</li>
@@ -95,7 +139,7 @@
       <li>Country Guesser Quiz</li>
     </ul>
   </div>
-
+  <!-- End Projects Overview Cards -->
   <hr style="height:25px">
   <!-- End Carousel -->
 
