--- a/projects.html
+++ b/projects.html
@@ -91,8 +91,8 @@
         <div class="card">
           <img src="img/twitter.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h5 class="card-title">Twitter Recommendations</h5>
+            <p class="card-text">Python recommendation engine built using Python and the Twitter API.</p>
           </div>
         </div>
       </div>
@@ -100,8 +100,8 @@
         <div class="card">
           <img src="img/robot.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h5 class="card-title">Robot Builder</h5>
+            <p class="card-text">Robot Shop application built using VueJS and ExpressJS to gain experience with a new JavaScript framework.</p>
           </div>
         </div>
       </div>
@@ -109,8 +109,8 @@
         <div class="card">
           <img src="img/virus.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+            <h5 class="card-title">COVID Tracker</h5>
+            <p class="card-text">COVID-19 case tracker web application built as part of a weekend challenge.</p>
           </div>
         </div>
       </div>
@@ -118,8 +118,8 @@
         <div class="card">
           <img src="img/dumbbell.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h5 class="card-title">Gym Recorder</h5>
+            <p class="card-text">Android application built to log gym sessions.</p>
           </div>
         </div>
       </div>
