--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,6 @@
 </head>
 
 <body>
-  Hello Projects
   <h2 id="section-heading">Highlight Reel</h2>
   <!-- Carousel -->
   <div id="carouselHighlightReel" class="carousel slide" data-bs-ride="carousel">
@@ -85,7 +84,7 @@
   <hr style="height:25px">
   <!-- Projects Overview Cards -->
   <div id="projects-overview" class="container">
-    <h2 id="section-heading">Projects Overview Cards</h2>
+    <h2 id="section-heading">Project Overview Cards</h2>
     <div class="row row-cols-1 row-cols-md-2 g-4">
       <div class="col">
         <div class="card">
